# coursework_6_skymarket

./: README.md  pyproject.toml
deploy/: docker-compose.yaml
market_postgres/: docker-compose.yaml
skymarket/ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/models/: ad.py  comment.py
skymarket/ads/serializers/: ad.py  comment.py
skymarket/ads/views/: comment.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  email.py  managers.py  models.py  serializers.py  urls.py
