[tool.poetry]
name = "coursework-6-skymarket"
version = "0.1.0"
description = ""
authors = ["DanilMirosh <miroshnichenko.da.vi@mail.ru>"]
readme = "README.md"
packages = [{include = "coursework_6_skymarket"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"
pillow = "^9.3.0"
psycopg2 = "^2.9.5"
django-cors-headers = "^3.13.0"
drf-spectacular = "^0.24.2"
djoser = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
