[tool.poetry]
name = "coursework-6-skymarket"
version = "0.1.0"
description = ""
authors = ["Danil Mirosh <miroshnichenko.da.vi@mail.ru>"]
readme = "README.md"
packages = [{include = "coursework_6_skymarket"}]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
django = "^4.1.4"
django-rest-framework = "^0.1.0"
pillow = "^9.3.0"
django-dotenv = "^1.4.2"
psycopg2 = "^2.9.5"
djoser = "^2.1.0"
django-cors-headers = "^3.13.0"
django-phonenumber-field = "^7.0.1"
drf-spectacular = "^0.25.1"
drf-nested-routers = "^0.93.4"
django-filter = "^22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
